--- a/www.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -9,6 +9,7 @@
 <!-- Style for the page-->
 <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css"/>
 <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/common.css"/>
+<link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" >
 <!-- favicon.ico -->
 <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
