修正字符串
修正字符串

--- a/www.hzshuangmei.com/templets/shuangmei/_header.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header.htm
@@ -8,7 +8,7 @@
             <!-- 增加百度站内搜索 -->
             <div class="top_c">
                 <div class="search_box">
-                    <form action="https://www.hzshuangmei.com/search/" target=_blank autocomplete=off id="bdcs-search-form" class="site-search-form">
+                    <form action="https://www.hzshuangmei.com/search/" target="_blank" autocomplete="off" id="bdcs-search-form" class="site-search-form">
                         <input type="hidden" name="s" value="5257607230163915007">
                          <input type="hidden" name="entry" value="1">
                         <input type="text" placeholder="请输入您要搜索的内容..." id="bdcsMain" name="q">
