修改搜索结果页
修改搜索结果页

--- a/www.hzshuangmei.com/templets/shuangmei/list_search.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_search.htm
@@ -23,7 +23,7 @@
             <script type="text/javascript">
             var bdcsFrameSid = "5257607230163915007";
             var bdcsFrameCharset = "utf-8";
-            var bdcsFrameWidth = 100 % ; //宽度请自行调整
+            var bdcsFrameWidth = 1200 ; //宽度请自行调整
             var bdcsFrameHeight = 0;
             var bdcsFrameWt = 1;
             var bdcsFrameHt = 2;
@@ -43,3 +43,4 @@
 <script src="{dede:global.cfg_jspath/}/pc/list_news.js"></script>
 
 </html>
+
