--- a/www.hzshuangmei.com/templets/shuangmei/list_search.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_search.htm
@@ -34,7 +34,7 @@
             var bdcsRemoveUrl = 0;
             </script>
             <!-- 按照实际情况修改下面js地址 -->
-            <script type="text/javascript" src="http://www.hzshuangmei.com/baidusearch.js"></script>
+            <script type="text/javascript" src="https://www.hzshuangmei.com/baidusearch.js"></script>
         </div>
     </div>
     {dede:include filename="_footer.htm"/}
