每月专家修改为张子杰
每月专家修改为张子杰

--- a/www.hzshuangmei.com/templets/shuangmei/_header.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header.htm
@@ -301,8 +301,11 @@
                         <h5 class="moon"><a href="/doctors" target="_blank" rel="noopener">每月专家</a></h5>
                     </li>
                     <li class="last-one">
-                        <a class="last-one" href="https://www.hzshuangmei.com/doctors/surgery/liudalie.html " target="_blank" rel="noopener">
-                            <img src="{dede:global.cfg_imgpath/}/pc/nav_zhuanjial.jpg" alt=""/>
+                        <!--<a class="last-one" href="https://www.hzshuangmei.com/doctors/surgery/liudalie.html " target="_blank" rel="noopener">-->
+                            <!--<img src="{dede:global.cfg_imgpath/}/pc/nav_zhuanjial.jpg" alt=""/>-->
+                        <!--</a>-->
+                        <a class="last-one j-consult" href="javascript:void(0)"  target="_blank" rel="noopener nofollow">
+                            <img src="{dede:global.cfg_imgpath/}/pc/myzzj.jpg" alt=""/>
                         </a>
                     </li>
                 </ul>
