--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -264,11 +264,12 @@
                 <div class="swiper-button-next swiper-button-next4"></div>
                 <div class="swiper-button-prev swiper-button-prev4"></div>
             </li>
-            <li><div class="hltd">
+            <li id="hltd"><div class="hltd" >
                 <a  class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener">
-                    <img  src="{dede:global.cfg_imgpath/}/pc/xmk/zyhl.png"   alt="胸部护理"/>
+                    <img  src="{dede:global.cfg_imgpath/}/pc/xmk/zyhl.png"   alt="护理团队"/>
                 </a>
-            </div></li>
+            </div>
+            </li>
         </ul>
         <a href="/doctors" class="ask" target="_blank" rel="noopener" rel="nofollow">MORE+</a>
     </div>
@@ -276,7 +277,6 @@
 <div class="index_clients">
     <div class="m1">
         <h3><img  src="{dede:global.cfg_imgpath/}/pc/title3.png"  alt="真人代言 现身说法"/></h3>
-
         <div id="tab4">
             <ul class="clearFix">
                 <li class="fli4">整形美容案例</li>
