--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -266,7 +266,7 @@
             </li>
             <li id="hltd"><div class="hltd" >
                 <a  class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener">
-                    <img  src="{dede:global.cfg_imgpath/}/pc/xmk/zyhl.png"   alt="护理团队"/>
+                    <img  src="{dede:global.cfg_imgpath/}/pc/xmk/zyhl.jpg"   alt="护理团队"/>
                 </a>
             </div>
             </li>
