--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -106,12 +106,12 @@
                         </a>
                     </div>
                     <div class="right clearFix">
-                        <a href="/projects/eye/yandai.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_02.jpg" alt="红妆无痕祛眼袋"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_03.jpg" alt="韩式隆鼻"/></a>
-                        <a href="/projects/nose/hzbbqb.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_04.jpg" alt="红妆芭比翘鼻"/></a>
-                        <a href="/projects/nose/heben.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_05.jpg" alt="赫本软骨鼻"/></a>
-                        <a href="/projects/face/zitizhifang.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_06.jpg" alt="自体脂肪填充"/></a>
-                        <a href="/projects/chest/hzwhfx.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/p1_07.jpg" alt="无痕丰胸"/></a>
+                        <a href="/projects/eye/yandai.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/tjxm/tjxm1.jpg" alt="红妆无痕祛眼袋"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/tjxm/tjxm2.jpg" alt="韩式隆鼻"/></a>
+                        <a href="/projects/nose/hzbbqb.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/tjxm/tjxm3.jpg" alt="红妆芭比翘鼻"/></a>
+                        <a href="/projects/nose/heben.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/tjxm/tjxm4.jpg" alt="赫本软骨鼻"/></a>
+                        <a href="/projects/face/zitizhifang.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/tjxm/tjxm5.jpg" alt="自体脂肪填充"/></a>
+                        <a href="/projects/chest/hzwhfx.html" target="_blank" rel="noopener"><img src="{dede:global.cfg_imgpath/}/pc/tjxm/tjxm6.jpg" alt="无痕丰胸"/></a>
                     </div>
                 </div>
             </li>
