--- a/www.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -11,11 +11,11 @@
 <meta name="google-site-verification" content="Odmo8X4zeUG1WPcCrCAueZz-dyBPFBs4Zqlb9FBT5z4" />
 <meta http-equiv="Access-Control-Allow-Origin" content="*" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114904919-2"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114904919-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-114904919-2');
-</script>
+</script> -->
