--- a/m.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -5,7 +5,10 @@
 <link rel="dns-prefetch" href="https://css.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://js.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://lxbjs.baidu.com">
-
+<link rel="dns-prefetch" href="https://z8.cnzz.com">
+<link rel="dns-prefetch" href="https://s19.cnzz.com">
+<link rel="dns-prefetch" href="https://tag.baidu.com">
+<link rel="dns-prefetch" href="https://sp0.baidu.com">
 <link rel="prefetch" href="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js" as="script">
 <link rel="prefetch" src="https://img.hzshuangmei.com/pc/kst/default.png">
 <link rel="prerender" src="https://img.hzshuangmei.com/pc/kst/default.png">
