--- a/www.hzshuangmei.com/templets/shuangmei/_link.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_link.htm
@@ -1,9 +1,14 @@
 <!-- Pre for optimization -->
-<link rel="dns-prefetch" href="https://cdn.bootcss.com/">
+<link rel="dns-prefetch" href="https://cdn.bootcss.com">
 <link rel="dns-prefetch" href="https://uploads.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://img.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://css.hzshuangmei.com">
 <link rel="dns-prefetch" href="https://js.hzshuangmei.com">
+<link rel="dns-prefetch" href="https://pv.kuaishang.cn">
+<link rel="dns-prefetch" href="https://z8.cnzz.com">
+<link rel="dns-prefetch" href="https://s19.cnzz.com">
+<link rel="dns-prefetch" href="https://tag.baidu.com">
+<link rel="dns-prefetch" href="https://sp0.baidu.com">
 <link rel="preload" href="{dede:global.cfg_csspath/}/pc/common.css" as="style" crossorigin />
 <link rel="preload" href="https://img.hzshuangmei.com/pc/favicon.ico" as="image" type="image/x-icon" crossorigin />
 <!-- Style for the page-->
