--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -7,6 +7,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <title>{dede:global.cfg_webname/}科技整形美容资讯</title>
+<!-- favicon.ico -->
+<link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
 <link rel='stylesheet' id='main-css'  href='{dede:global.cfg_templets_skin/}/css/style.css' type='text/css' media='all' />
 <script type='text/javascript' src='{dede:global.cfg_templets_skin/}/js/jquery.js'></script>
 <meta name="keywords" content="{dede:global.cfg_keywords/}">
