修改熊掌号模板和静态资源路径
修改熊掌号模板和静态资源路径

--- a/xzh.hzshuangmei.com/templets/shuangmei/_footer.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/_footer.htm
@@ -16,7 +16,7 @@
         <!--</ul>-->
     <!--</div>-->
     {dede:global.cfg_powerby/}
-    <div style="display:none">
+<!--     <div style="display:none">
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -29,5 +29,5 @@
         <script src="/templets/xzh/js/stat.js"></script>
         <script src="https://c.cnzz.com/core.php?web_id=1263403568&amp;t=z" charset="utf-8" type="text/javascript"></script>
         <a href="http://www.cnzz.com/stat/website.php?web_id=1263403568" target="_blank" title="站长统计">站长统计</a>
-</div>
+</div> -->
 </footer>
