--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -6,12 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<title>{dede:global.cfg_webname/}科技整形美容资讯</title>
+<title>海南红妆双美整形美容资讯</title>
 <!-- favicon.ico -->
 <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
-<link rel='stylesheet' id='main-css'  href='{dede:global.cfg_templets_skin/}/css/style.css' type='text/css' media='all' />
-<script type='text/javascript' src='{dede:global.cfg_templets_skin/}/js/jquery.js'></script>
+
+<link rel='stylesheet' id='main-css'  href='{dede:global.cfg_csspath/}/xzh/style.css' type='text/css' media='all' />
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" crossorigin></script>
 <meta name="keywords" content="{dede:global.cfg_keywords/}">
 <meta name="description" content="{dede:global.cfg_description/}">
 <!--[if lt IE 9]><script src="{dede:global.cfg_templets_skin/}/js/html5.js"></script><![endif]-->
