--- a/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/_head.htm
@@ -32,7 +32,7 @@
         <span class="sitenav-mask"></span>
         <span class="searchstart-on"><i class="fa">&#xe600;</i></span>
         <span class="searchstart-off"><i class="fa">&#xe606;</i></span>
-        <form method="get" class="searchform" action="{dede:global.cfg_cmsurl/}/plus/search.php" target="_blank" autocomplete="off"  >
+        <form method="get" class="searchform" action="{dede:global.cfg_cmsurl/}/plugin/search.php" target="_blank" autocomplete="off"  >
             <button tabindex="3" class="sbtn" type="submit"><i class="fa">&#xe600;</i></button><input tabindex="2" class="sinput" name="q" type="text" placeholder="输入关键字" value="">
         </form>
     </div>
