修改模板添加字体
修改模板添加字体

--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -94,7 +94,7 @@
 		<!--fullimage       : '0'-->
 	<!--}-->
 <!--</script>-->
-<script type='text/javascript' src='{dede:global.cfg_templets_skin/}/js/main.js'></script>
+    <script type='text/javascript' src='{dede:global.cfg_jspath/}/xzh/main.js'></script>
 	 <script>
          function multi(pagenum,tagid)
          {
