--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
 
 <link rel='stylesheet' id='main-css'  href='{dede:global.cfg_csspath/}/xzh/style.css' type='text/css' media='all' />
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" crossorigin></script>
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" ></script>
 <meta name="keywords" content="{dede:global.cfg_keywords/}">
 <meta name="description" content="{dede:global.cfg_description/}">
 <!--[if lt IE 9]><script src="{dede:global.cfg_templets_skin/}/js/html5.js"></script><![endif]-->
