--- a/xzh.hzshuangmei.com/templets/shuangmei/index_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index_article.htm
@@ -14,7 +14,7 @@
     <title>{dede:field.title/}_海南红妆双美整形美容资讯</title>
     <link rel='stylesheet' id='main-css' href='{dede:global.cfg_csspath/}/xzh/style.css' type='text/css' media='all' />
     <link href='{dede:global.cfg_csspath/}/xzh/artilec.css' rel="stylesheet" type="text/css" media="screen and (min-width: 320px) and (max-width: 768px)" />
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" crossorigin></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" ></script>
     <meta name="keywords" content="{dede:field.keywords/}">
     <meta name="description" content="{dede:field.description  function='html2text(@me)'/}">
     <!--[if lt IE 9]><script src="{dede:global.cfg_jspath/}/xzh/html5.js"></script><![endif]-->
