--- a/xzh.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index.htm
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
 <title>海南红妆双美整形美容资讯</title>
 <!-- favicon.ico -->
 <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
