--- a/xzh.hzshuangmei.com/templets/shuangmei/index_article.htm
+++ b/xzh.hzshuangmei.com/templets/shuangmei/index_article.htm
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="cache-control" content="no-siteapp">
     <!-- favicon.ico -->
 <link rel="icon" href="https://img.hzshuangmei.com/pc/favicon.ico" type="image/x-icon"/>
